--- a/favorite.html
+++ b/favorite.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/c365e3a418.js" crossorigin="anonymous"></script>
   <title>MOvie List</title>
 </head>
 
@@ -33,6 +34,26 @@
   </nav>
 
   <div class="container">
+    <div class="row mt-3">
+      <div class="search-bar-icon d-flex justify-content-between align-items-center">
+        <form class="row row-cols-lg-auto g-3 align-items-center mb-2" id="search-form">
+          <div class="col-12">
+            <label class="visually-hidden" for="inlineFormInputGroupUsername">Search Keyword</label>
+            <div class="input-group">
+              <input type="text" class="form-control" id="search-input" placeholder="Keyword...">
+            </div>
+          </div>
+    
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Search</button>
+          </div>
+        </form>
+        <div class="icon" id="render-icon">
+          <i class="fa-solid fa-th fa-lg m-2"></i>
+          <i class="fa-solid fa-bars fa-lg m-2"></i>
+        </div>
+      </div>
+    </div>
     <!-- render movie list -->
     <div class="row" id="data-panel"></div>
   </div>
